- update react component, electron config / add hextor icon.

--- a/resources/app.pug
+++ b/resources/app.pug
@@ -4,6 +4,6 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Hex-Tweenerator-react
+    title Hextor App
   body
-    #app
+    main#app
